--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 .app{
     display: flex;
     flex-direction: column;
-    max-width: 500px;
+    width: 500px;
     margin: 0 auto;
     text-align: center;
 }
