--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,3 +1,6 @@
 .title{
-    font-size: 25px;
+    text-decoration: underline;
+    font-size: 45px;
+    margin-top: 13px;
+    margin-bottom: 10px;
 }
