--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -4,6 +4,7 @@
     justify-content: center;
     box-sizing: border-box;
     gap: 24px;
+    margin-bottom: 20px;
 }
 .addInput{
     font-size: 35px;
