--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -4,5 +4,20 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    margin: 24px 0 10px 0;
+}
+.call-to-act{
+    color: gray;
+    margin: 0;
+    animation: callLoop 2s infinite ease-in-out;
+}
+@keyframes callLoop {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
