--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -3,7 +3,8 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 5px;
+    margin-top: 18px;
 }
 .call-to-act{
     font-size: 25px;
