--- a/src/components/List-item/List-item.css
+++ b/src/components/List-item/List-item.css
@@ -1,10 +1,13 @@
 .listItem{
     position: relative;
-    font-size: 35px;
     text-align: left;
     user-select: none;
 }
 .listItem span{
+    display: block;
+    max-width: calc(100% - 80px);
+    font-size: 35px;
+    line-height: 100%;
     cursor: pointer;
     margin-left: 40px;
 }
@@ -25,13 +28,13 @@
     transition: 0.1s;
     color: transparent;
     right: 0;
-    top: 16px;
+    top: 10px;
     font-size: 30px;
 }
 .erase-btn{
     border: none;
     left: 0;
-    top: 18px;
+    top: 12px;
     font-size: 20px;
 }
 .done{
