--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -2,3 +2,9 @@
     font-size: 25px;
     line-height: 100%;
 }
+@media (max-width: 520px) {
+    .counter{
+        font-size: 20px;
+        margin-bottom: 5px;
+    }
+}
